[gd_scene load_steps=5 format=2]

[ext_resource path="res://Graphics/kenney/PNG/Retina/minus_one.png" type="Texture" id=1]
[ext_resource path="res://Graphics/kenney/PNG/Retina/black_star.png" type="Texture" id=2]
[ext_resource path="res://BlackStar.gd" type="Script" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 77.4954

[node name="BlackStar" type="RigidBody2D" groups=[
"minus_points",
]]
collision_layer = 16
collision_mask = 2
gravity_scale = 0.0
angular_damp = 0.0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="MinusOne" type="Sprite" parent="."]
visible = false
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 1 )

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 10.0
one_shot = true
autostart = true

[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
